@@ -249,7 +249,37 @@ void remove_defunct_cpusets()
   } /* END remove_defunct_cpusets() */
 
 
+int get_cpuset_size(char *cpusetStr)
+  {
+  int val1 = -1;
+  int val2 = -2;
+  int j;
+  int range = FALSE;
+  int len = 0;
+  char *ptr;
 
+  val1 = atoi(cpusetStr);
+  range = TRUE;
+
+  len = strlen(cpusetStr);
+  for (j=0; j<len; j++)
+    {
+    if (cpusetStr[j] == '-')
+      {
+      range = TRUE;
+      ptr = cpusetStr;
+      ptr += j + 1;
+      val2 = atoi(ptr);
+      break;
+      }
+    }
+  
+  if (val2 != -1)
+    return(val2+1);
+  else
+    return(val1);
+  
+  }
 
 
 /**
@@ -345,18 +375,25 @@ void remove_boot_set(
   static char    id[] = "remove_boot_set";
   int   j;
   int   first;
-  int   cpusetMap[1024];
+  int   *cpusetMap;
+  int   cpuset_size;
   char  tmpBuf[MAXPATHLEN];
 
   if ((rootStr == NULL) ||
       (bootStr == NULL))
     return;
   
-  /* clear out map */
-  for (j=0; j<1024; j++)
+
+  cpuset_size = get_cpuset_size(rootStr);
+  if (cpuset_size <= 0)
     {
-    cpusetMap[j] = 0;
+    return;
     }
+
+  cpusetMap = (int *)calloc(1, cpuset_size + 1);
+  if(cpusetMap == NULL)
+    return;
+
 
   if (LOGLEVEL >= 7)
     {
@@ -376,7 +413,7 @@ void remove_boot_set(
 
   rootStr[0] = '\0';
   first = TRUE;
-  for (j=0; j<1024; j++)
+  for (j=0; j<cpuset_size; j++)
     {
     if (cpusetMap[j] > 0 )
       {
@@ -402,6 +439,7 @@ void remove_boot_set(
     }
 
 
+  free(cpusetMap);
   return;
   }
 
